# rosbag-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  dummy.bag
.github/workflows/: rosbag.yml
src/: chunk_iter.rs  cursor.rs  error.rs  field_iter.rs  index_iter.rs  lib.rs  msg_iter.rs  record.rs  record_types.rs
src/record_types/: bag_header.rs  chunk.rs  chunk_info.rs  connection.rs  index_data.rs  message_data.rs  mod.rs  utils.rs
