[package]
name = "rosbag"
version = "0.3.0"
edition = "2018"
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utilities for reading ROS bag files."
documentation = "https://docs.rs/rosbag"
repository = "https://github.com/SkoltechRobotics/rosbag-rs"
keywords = ["ros", "datasets", "robotics"]

[dependencies]
byteorder = "1"
log = "0.4"
hex = "0.4"
memmap = "0.7"

[badges]
travis-ci = { repository = "SkoltechRobotics/rosbag-rs" }
