[package]
name = "rosbag"
version = "0.5.0" # Also update html_root_url in lib.rs when bumping this
description = "Utilities for reading ROS bag files."
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/rosbag"
repository = "https://github.com/SkoltechRobotics/rosbag-rs"
keywords = ["ros", "datasets", "robotics"]
categories = ["parser-implementations", "science::robotics"]

[dependencies]
byteorder = "1.1"
bzip2 = "0.4.3"
base16ct = "0.1"
log = "0.4.4"
lz4 = "1.23.2"
memmap2 = "0.5"
